debug_log.txt
Starting server debug... 
Current directory: c:\Users\baegs\Desktop\heaker\Hackathon\Hackathon\backend 
c:\Users\baegs\Desktop\heaker\Hackathon\Hackathon\backend\server.cjs:472
const db = initializeDatabase();
      ^

SyntaxError: Identifier 'db' has already been declared
    at wrapSafe (node:internal/modules/cjs/loader:1620:18)
    at Module._compile (node:internal/modules/cjs/loader:1662:20)
    at Object..js (node:internal/modules/cjs/loader:1820:10)
    at Module.load (node:internal/modules/cjs/loader:1423:32)
    at Function._load (node:internal/modules/cjs/loader:1246:12)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:235:24)
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:171:5)
    at node:internal/main/run_main_module:36:49

Node.js v22.18.0
Server failed with error code 1 
